# deltadevx

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Sidebar.tsx  TopBar.tsx
src/utils/: jsonDiff.ts  jwtDecode.ts
src/views/: JsonDiff.tsx  JwtDecoder.tsx
