[package]
name = "tauri-app"
version = "1.0.0"
description = "DeltaDevX — Local developer utilities"
authors = ["DeltaDevX"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
